--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angularfire2": "^5.4.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.3",
+    "firebase-tools": "^8.2.0",
+    "g": "^2.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
