--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "firebase": "^7.14.3",
     "firebase-tools": "^8.2.0",
     "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
+    "ng5-validation": "^1.0.0",
+    "ngx-custom-validators": "^9.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
