--- a/package.json
+++ b/package.json
@@ -12,20 +12,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.5",
+    "@angular/cdk": "^9.2.3",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
     "@angular/forms": "~9.0.5",
     "@angular/localize": "~9.0.5",
+    "@angular/material": "^9.2.3",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "angular-4-data-table": "^0.4.6",
+    "angular-9-datatable": "^0.1.1",
     "angularfire2": "^5.4.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.3",
     "firebase-tools": "^8.2.0",
     "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
+    "ng5-validation": "^1.0.0",
+    "ngx-custom-validators": "^9.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
